2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Prune now-obsolete ‘struct buf’.

	* base.h (buf): Delete struct.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘Ofclose’ with ‘Ozclose’ or plain ‘fclose’.

	* co.c (main): Use ‘Ozclose’.
	* merger.c (merge): Likewise.
	* rcs.c (buildeltatext): Likewise.
	* rcsclean.c (main): Use ‘fclose’.
	* rcslex.c (Ofclose): Incorporate into ‘Ozclose’.
	* rcsmerge.c (main): Use ‘fclose’.
	* rlog.c (main): Use ‘Ozclose’.
	* base.h (Ofclose): Delete func decl.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Factor func-finish code.

	* rcsgen.c (buildrevision): Move common finish to end of func.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Prune some now-obsoleted macros/funcs.

	* base.h (bufautobegin): Delete macro.
	(bufalloc, bufautoend, fbuf_save): Delete func decls.
	* rcsfnms.c (bufalloc, bufautoend): Delete funcs.
	* rcsutil.c (fbuf_save): Delete func.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘SHARED’ more.

	* b-kwxout.c (keyreplace): Save $Log leader temporarily in ‘SHARED’.
	* ci.c (getlogmsg): For -k, save log message in ‘SHARED’.
	* rcsdiff.c [DIFF_L] (setup_label): Don't take
	‘struct buf *’; construct label in ‘SHARED’.
	(main) [DIFF_L]: Update calls to ‘setup_label’.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Prune some now-obsoleted funcs.

	* base.h (bufenlarge, bufscat, bufscpy): Delete func decls.
	* rcsfnms.c (bufrealloc, bufenlarge, bufscat, bufscpy): Delete funcs.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘expandsym’ with ‘fully_numeric_no_k’.

	* base.h (expandsym): Delete func decl.
	(fully_numeric_no_k): New macro.
	* co.c (addjoin, main): Use ‘fully_numeric_no_k’.
	* rcs.c (numrev): Change var type to ‘struct cbuf’.
	(removerevs, doassoc, setlock, dolocks, domessages)
	(rcs_setstate, main): Use ‘fully_numeric_no_k’.
	* rcsrev.c (expandsym): Delete func.